# eigen-kalman

./: CMakeLists.txt  README.mkd  generateData.h  gnuplot.txt  kfExampleTune.cpp  kftest.cpp  urls.txt
eigenkf/: KalmanFilter.h
